freesia/manifests/kubevela/ingressroute-velaux.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: velaux
  namespace: vela-system
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`velaux.harvestasya.org`)
    priority: 10
    services:
    - name: velaux-server
      port: 8000
    middlewares:
    - name: security-headers
      namespace: traefik
    - name: authentik-forward-auth
      namespace: authentik

  - kind: Rule
    match: Host(`velaux.harvestasya.org`) && PathPrefix(`/outpost.goauthentik.io/`)
    priority: 15
    services:
    - name: authentik-server
      namespace: authentik
      port: http
  tls:
    secretName: harvestasya-wildcard-tls
